# Python

./: .gitignore  README.md
CleanTaiwan/: justfile  pyproject.toml
CleanTaiwan/src/cleantaiwan/: __main__.py
CloudFunctions/: Makefile
CloudFunctions/data/: HongKong - ZUELLIG - Sales - 201903_2.xlsx
CloudFunctions/src/: main.py  requirements.txt
Derivate/: main.py
DetectFace/: main.py
DigitalInitiatives/: clustering.py
Embedding_TF/: .gitignore  main.py
Emulator/: main.py
Galaxy/: .gitignore  main.py  sketch.py  star.py
Goster/: .gitignore  entity.py  justfile  main.py  monster.py  player.py  pyco.py  pyproject.toml  sketch.py  util.py
Goster/assets/: goster.tsx  map.csv  map.tmx  spritesheet.csv
Img2Ascii/: Img2Ascii.py
MazeNearestExit/: main.py  test.py
Mnist_TF/: .gitignore  mnist.py
Monad/: .main.py.swp  main.py
Monad/features/: parser.feature
Monad/monad/: __init__.py  function.py  kleisli.py  monad.py
Monad/tests/: __main__.py
OAuth2Test/: main.py  oauth.py
Online/: wsgi.py
Online/app/: package-lock.json  package.json
Online/flaskr/: .api.py.swp  __init__.py  api.py  schema.sql
Prose/: .gitignore  pyproject.toml
Pyflow/: autoencoder.py  chatbot.py  embedding.py  feedforward.py  polynomial.py  requirements.txt
Pyflow/data/: intents.json
Pylog/: Pylog.py
Tracker/: effects.py  music.py  oscillators.py  plots.py  song.py  synth.py
XanaduFunctions/: .gitignore  Makefile  docker-compose-no-secrets.yml
kernel_TF/: main.py  requirements.txt
test-antlr/: pyproject.toml
test-tree-sitter/: build.py  pyproject.toml
(+70 files in other folders)
